
=== Breaking changes

* The HelpCommand signature has changed.
The name of the "help" command is configurable.
Additionally, when defining `opt.HelpCommand` there is no need to define a help option as it also declares one.
+
----
- opt.Bool("help", false, opt.Alias("?"))
- opt.HelpCommand("")
+ opt.HelpCommand("help", "", opt.Alias("?"))
----

* The Dispatch signature has changed.
There is no need to define the name of the help command at this level anymore since it has been moved to the `HelpCommand` declaration.
+
[source,diff]
----
- err = opt.Dispatch(ctx, "help", remaining)
+ err = opt.Dispatch(ctx, remaining)
----

* Move `InterruptContext` into a package level function and not a method of GetOpt.
+
[source,diff]
----
- ctx, cancel, done := opt.InterruptContext()
+ ctx, cancel, done := getoptions.InterruptContext()
----

* `Write` io.Writer used to write warnings and errors (which defaults to os.Stderr) has been made into a package level variable and not a method of GetOpt.

* `CommandFn` is no longer an exported field of `GetOpt`.
If this was ever used, now the canonical way to execute a command function is through `opt.Dispatch`.

* Remove `opt.Option`, this was used in test code to return the internal representation of an option and shouldn't be accessed directly by an end user.

* Remove `opt.Stringer`, this was used to print a text representation of the parsed structure but other than in test code there is little value for it.

* WIP: `opt.SetRequireOrder` might be dropped since now we fully track subcommands.
Need to consider its usefulness when doing wrappers around other programs.

* WIP: `opt.CustomCompletion` might be dropped.

* Move exported packages that this library uses into the `internal` directory so they can't be imported by other projects by mistake.


=== New Features

Autocompletion is super useful now.

== v0.24.0: New Features

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.
